force-app/main/default/objects/Employees__c/Employees__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>