force-app/main/default/objects/Employees__c/fields/Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code__c</fullName>
    <label>Business Unit Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N18</fullName>
            </value>
            <value>
                <fullName>320</fullName>
            </value>
            <value>
                <fullName>520</fullName>
            </value>
            <value>
                <fullName>531</fullName>
            </value>
            <value>
                <fullName>431</fullName>
            </value>
            <value>
                <fullName>525</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>