force-app/main/default/objects/Employees__c/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <label>Business Unit Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BO - MES</fullName>
            </value>
            <value>
                <fullName>Engineering Team 320</fullName>
            </value>
            <value>
                <fullName>Site Installation</fullName>
            </value>
            <value>
                <fullName>Transport (National)</fullName>
            </value>
            <value>
                <fullName>Engineering Team 520</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>