force-app/main/default/objects/Employees__c/fields/Name_Role__c.field-meta.xml
<CustomField>
    <fullName>Name_Role__c</fullName>
    <formula>Name + &quot; - &quot; +  TEXT(Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name - Role</label>
    <type>Text</type>
</CustomField>