force-app/main/default/objects/Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Department_Code__c</columns>
    <columns>Business_Unit_Code__c</columns>
    <columns>Business_Unit_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Employee_Code__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Employees</label>
</ListView>