force-app/main/default/objects/Employees__c/listViews/Sage_Employees_LV.listView-meta.xml
<ListView>
    <fullName>Sage_Employees_LV</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Role__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Employee_Code__c</columns>
    <columns>Department_Code__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email__c</field>
        <operation>contains</operation>
        <value>@sageautomation</value>
    </filters>
    <label>Sage Employees</label>
</ListView>